Issue #3205348 by e0ipso: Improve readability in the introspection page

--- a/modules/typed_entity_ui/css/typed_entity_ui.class_with_variants.css
+++ b/modules/typed_entity_ui/css/typed_entity_ui.class_with_variants.css
@@ -1,11 +1,23 @@
 .class-with-variants {
   background-color: rgba(20, 255, 127, 0.3);
-  padding: 0.02rem 0.5em 1em 0.5em;
+  padding: 1em 0.5em;
   border-radius: 3px;
 }
-.class-with-variants code.className {
-  background-color: rgba(0, 0, 0, 0.2);
-  padding: 2px 6px;
-  border-radius: 3px;
-  font-weight: bold;
+
+.class-with-variants .item-list ul,
+.class-with-variants .item-list ul li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.class-with-variants .item-list ul li {
+  margin: 0.25em 0 0.25em 1.5em;
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 2px;
+  padding: 0.5em 0.75em;
+}
+
+.class-with-variants h5:first-child {
+  margin-top: 0;
 }
