--- a/modules/typed_entity_ui/css/typed_entity_ui.php_class_info.css
+++ b/modules/typed_entity_ui/css/typed_entity_ui.php_class_info.css
@@ -1,11 +1,15 @@
 .php-class-info {
   background-color: rgba(20, 127, 255, 0.3);
-  padding: 0.02rem 0.5em 1em 0.5em;
+  padding: 1em 0.5em;
   border-radius: 3px;
 }
-.php-class-info code.className {
+.php-class-info .class-name {
   background-color: rgba(0, 0, 0, 0.2);
   padding: 2px 6px;
   border-radius: 3px;
   font-weight: bold;
+}
+
+.php-class-info h3:first-child {
+  margin-top: 0;
 }
